--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
         </dependency>
         <!-- Thanks for using https://jar-download.com -->
 
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/us.ihmc/jfoenix -->
         <dependency>
             <groupId>us.ihmc</groupId>
