--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,47 @@
             <version>8.0.8</version>
         </dependency>
 
+
+        <!-- JasperReports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>7.0.1</version>
+        </dependency>
+
+        <!-- Apache POI for XLS/XLSX Export -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version> <!-- Use a version compatible with Java 17 -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version> <!-- Use a version compatible with Java 17 -->
+        </dependency>
+
+        <!-- XMLBeans (required by Apache POI for XLSX support) -->
+        <dependency>
+            <groupId>org.apache.xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>5.1.1</version> <!-- Compatible with POI and Java 17 -->
+        </dependency>
+
+        <!-- Commons Compress (required by Apache POI for XLSX support) -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.23.0</version> <!-- Compatible with Java 17 -->
+        </dependency>
+
+        <!-- For exporting charts and graphics -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
